# Circle-Cycle

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: abilities.json  cards.json  characters.json
docs/: structure.md
game/: ability.py  bot.py  card.py  character.py  engine.py  loader.py
src/circle_cycle/: __main__.py
src/circle_cycle/application/services/: ability_resolver.py  battle_engine.py  bot_ai.py  card_applicator.py
src/circle_cycle/domain/constants/: game.py
src/circle_cycle/domain/entities/: ability.py  card.py  character.py
src/circle_cycle/domain/enums/: ability_type.py  card_stat.py  character_size.py  status_effect.py
src/circle_cycle/domain/exceptions/: battle.py
src/circle_cycle/domain/interfaces/: data_repository.py
src/circle_cycle/domain/value_objects/: card_effect.py
src/circle_cycle/infrastructure/config/: settings.py
src/circle_cycle/infrastructure/persistence/repositories/: json_data_repository.py
src/circle_cycle/infrastructure/ui/: app.py
src/circle_cycle/infrastructure/ui/rendering/: draw_character.py
src/circle_cycle/infrastructure/ui/screens/: battle_screen.py  card_screen.py  select_screen.py
tests/: conftest.py
tests/integration/: test_json_repository.py
tests/unit/: test_battle_engine.py
ui/: app.py  battle_screen.py  card_screen.py  draw_character.py  select_screen.py
