[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circle-cycle"
version = "0.1.0"
description = "A turn-based strategy game built with Python and Tkinter"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/circle_cycle"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["circle_cycle"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
packages = ["circle_cycle"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/infrastructure/ui/*"]

[tool.coverage.report]
fail_under = 70
